# main-project-snoopy-corp

./: .gitignore  CMakeLists.txt  README.md
_build/: CMakeCache.txt
app/: CMakeLists.txt  createMaps  createMaps.cpp  main.cpp  main_wxWidgets.cpp  mapExample1.json  test_robots.cpp  test_wxWidgets.cpp
dependencies/: dependencies.cmake
docs/: README.md
docs/contributions/: Sprint0_Contribution_AdelinaGutic.md  Sprint0_Contribution_BrettBarnes.md  Sprint0_Contribution_DhruvamDesai.md  Sprint0_Contribution_SkylerHe.md  Sprint1_Contribution_Adelina_Gutic.md  Sprint1_Contribution_Brett_Barnes.md  Sprint1_Contribution_Dhruvam_Desai.md  Sprint1_Contribution_Skyler_He.md  Sprint2_Contribution_AdelinaGutic.md  Sprint2_Contribution_Brett_Barnes.md  Sprint2_Contribution_Dhruvam_Desai.md  Sprint2_Contribution_Skyler_He.md  Sprint3_Contribution_Brett_Barnes.md  Sprint3_Contribution_Dhruvam_Desai.md  Sprint3_Contribution_Skyler_He.md  Sprint4_Contribution_Adelina_Gutic.md  Sprint4_Contribution_Brett_Barnes.md  Sprint4_Contribution_DhruvamDesai.md  Sprint4_Contribution_Skyler_He.md  Sprint5_Constribution_Skyler_He.md  Sprint5_Contribution_Adelina_Gutic.md  Sprint5_Contribution_Brett_Barnes.md  Sprint5_Contribution_DhruvamDesai.md
docs/design/: ARCHITECTURE.md  CLASSES.md  DESIGN.md  SEQUENCE.md  WIREFRAMES.md
docs/design/activity_diagrams/: Simulator.puml
docs/design/md_files/: ARCHITECTURE.md  CLASSES.md  SEQUENCE.md  SIMULATION.md  USECASES.md
docs/design/modeling_diagrams/: class_diagram.puml  use_case_diagram.puml  wireframe_dashboard.xlsx
docs/design/modeling_diagrams/sequence_diagrams/: cleaning_task.puml  field_engineer.puml  senior_management.puml  task_assignment.puml  view_status.puml
docs/notes/: Customer_Interview_Document.md  initial_staffing_plan.md  staffing_plan.md
docs/user_guide/: USER_GUIDE.md
include/: map.hpp
include/dashboard/: dashboard.hpp  error_log.hpp  live_robot.hpp  metrics.hpp
include/database/: mongoDBWrapper.hpp
include/sim_lib/: _sim_lib.hpp  map.hpp  mongoDBWrapper.hpp  robot.hpp  scrubber_robot.hpp  shampoo_robot.hpp  simulation_driver.hpp  vacuum_robot.hpp
include/wxwidgets_lib/: wxdashboard.hpp  wxerrorDashboard.hpp  wxhistoricalData.hpp  wxtaskbox.hpp  wxwidgets.hpp
src/: map.cpp
src/database/: mongoDBWrapper.cpp
src/sim_src/: dashboard.cpp  map.cpp  mongoDBWrapper.cpp  robot.cpp  scrubber_robot.cpp  shampoo_robot.cpp  simulation_driver.cpp  vacuum_robot.cpp
src/wxwidgets/: wxdashboard.cpp  wxerrorDashboard.cpp  wxhistoricalData.cpp  wxtaskbox.cpp  wxwidgets.cpp
tests/: CMakeLists.txt  Map_Tests.cpp  assignment_tests.cpp  cleaning_tests.cpp  mongodb_tests.cpp
